ctpgo/cctptrade_api_darwin.h

DLL_EXPORT_C_DECL int WPCTP dCTP_GetSystemInfo(char *pSystemInfo, int nLen);
DLL_EXPORT_C_DECL int WPCTP dCTP_GetSystemInfoUnAesEncode(char *pSystemInfo, int nLen);
DLL_EXPORT_C_DECL void* WPCTP dCTP_GetDataCollectApiVersion();
DLL_EXPORT_C_DECL void* WPCTP tGetApiVersion();
DLL_EXPORT_C_DECL void* WPCTP tGetTradingDay(void *api);
// 期货发起冲正银行转期货请求，银行处理完毕后报盘发回的通知
DLL_EXPORT_C_DECL void WPCTP tOnRtnRepealFromBankToFutureByFuture(void* spi, void* func);
// 期货发起冲正期货转银行请求，银行处理完毕后报盘发回的通知
DLL_EXPORT_C_DECL void WPCTP tOnRtnRepealFromFutureToBankByFuture(void* spi, void* func);
// 期货发起银行资金转期货应答
DLL_EXPORT_C_DECL void WPCTP tOnRspFromBankToFutureByFuture(void* spi, void* func);
// 期货发起期货资金转银行应答
DLL_EXPORT_C_DECL void WPCTP tOnRspFromFutureToBankByFuture(void* spi, void* func);
// 期货发起查询银行余额应答
DLL_EXPORT_C_DECL void WPCTP tOnRspQueryBankAccountMoneyByFuture(void* spi, void* func);
// 银行发起银期开户通知
DLL_EXPORT_C_DECL void WPCTP tOnRtnOpenAccountByBank(void* spi, void* func);
// 银行发起银期销户通知
DLL_EXPORT_C_DECL void WPCTP tOnRtnCancelAccountByBank(void* spi, void* func);
// 银行发起变更银行账号通知
DLL_EXPORT_C_DECL void WPCTP tOnRtnChangeAccountByBank(void* spi, void* func);
// 请求查询分类合约响应
DLL_EXPORT_C_DECL void WPCTP tOnRspQryClassifiedInstrument(void* spi, void* func);
// 请求组合优惠比例响应
DLL_EXPORT_C_DECL void WPCTP tOnRspQryCombPromotionParam(void* spi, void* func);
// 投资者风险结算持仓查询响应
DLL_EXPORT_C_DECL void WPCTP tOnRspQryRiskSettleInvstPosition(void* spi, void* func);
// 风险结算产品查询响应
DLL_EXPORT_C_DECL void WPCTP tOnRspQryRiskSettleProductStatus(void* spi, void* func);
// SPBM期货合约参数查询响应
DLL_EXPORT_C_DECL void WPCTP tOnRspQrySPBMFutureParameter(void* spi, void* func);
// SPBM期权合约参数查询响应
DLL_EXPORT_C_DECL void WPCTP tOnRspQrySPBMOptionParameter(void* spi, void* func);
// SPBM品种内对锁仓折扣参数查询响应
DLL_EXPORT_C_DECL void WPCTP tOnRspQrySPBMIntraParameter(void* spi, void* func);
// SPBM跨品种抵扣参数查询响应
DLL_EXPORT_C_DECL void WPCTP tOnRspQrySPBMInterParameter(void* spi, void* func);
// SPBM组合保证金套餐查询响应
DLL_EXPORT_C_DECL void WPCTP tOnRspQrySPBMPortfDefinition(void* spi, void* func);
// 投资者SPBM套餐选择查询响应
DLL_EXPORT_C_DECL void WPCTP tOnRspQrySPBMInvestorPortfDef(void* spi, void* func);
// 投资者新型组合保证金系数查询响应
DLL_EXPORT_C_DECL void WPCTP tOnRspQryInvestorPortfMarginRatio(void* spi, void* func);
// 投资者产品SPBM明细查询响应
DLL_EXPORT_C_DECL void WPCTP tOnRspQryInvestorProdSPBMDetail(void* spi, void* func);
// 创建TraderApi
DLL_EXPORT_C_DECL void WPCTP tRelease(void *api);
// 初始化
DLL_EXPORT_C_DECL void WPCTP tInit(void *api);
// 等待接口线程结束运行
DLL_EXPORT_C_DECL int WPCTP tJoin(void *api);
// 注册前置机网络地址
DLL_EXPORT_C_DECL void WPCTP tRegisterFront(void *api, char *pszFrontAddress);
// @remark RegisterNameServer优先于RegisterFront
DLL_EXPORT_C_DECL void WPCTP tRegisterNameServer(void *api, char *pszNsAddress);
// 注册名字服务器用户信息
DLL_EXPORT_C_DECL void WPCTP tRegisterFensUserInfo(void *api, struct CThostFtdcFensUserInfoField *pFensUserInfo);
// 注册回调接口
DLL_EXPORT_C_DECL void WPCTP tRegisterSpi(void *api, void *pSpi);
// 订阅私有流。
DLL_EXPORT_C_DECL void WPCTP tSubscribePrivateTopic(void *api, int nResumeType);
// 订阅公共流。
DLL_EXPORT_C_DECL void WPCTP tSubscribePublicTopic(void *api, int nResumeType);
// 客户端认证请求
DLL_EXPORT_C_DECL int WPCTP tReqAuthenticate(void *api, struct CThostFtdcReqAuthenticateField *pReqAuthenticateField, int nRequestID);
// 注册用户终端信息，用于中继服务器多连接模式
DLL_EXPORT_C_DECL int WPCTP tRegisterUserSystemInfo(void *api, struct CThostFtdcUserSystemInfoField *pUserSystemInfo);
// 上报用户终端信息，用于中继服务器操作员登录模式
DLL_EXPORT_C_DECL int WPCTP tSubmitUserSystemInfo(void *api, struct CThostFtdcUserSystemInfoField *pUserSystemInfo);
// 用户登录请求
DLL_EXPORT_C_DECL int WPCTP tReqUserLogin(void *api, struct CThostFtdcReqUserLoginField *pReqUserLoginField, int nRequestID, TThostFtdcSystemInfoLenType length, TThostFtdcClientSystemInfoType systemInfo);
// 登出请求
DLL_EXPORT_C_DECL int WPCTP tReqUserLogout(void *api, struct CThostFtdcUserLogoutField *pUserLogout, int nRequestID);