pyctp/macos/ctptrade_api.py

        self.FP_OnRtnRepealFromBankToFutureByFuture = CFUNCTYPE(None, POINTER(CThostFtdcRspRepealField))(self.__OnRtnRepealFromBankToFutureByFuture)
        self.h.tOnRtnRepealFromBankToFutureByFuture(self.pSpi, self.FP_OnRtnRepealFromBankToFutureByFuture)
        # 期货发起冲正期货转银行请求，银行处理完毕后报盘发回的通知
        self.h.tOnRtnRepealFromFutureToBankByFuture.argtypes = [c_void_p, c_void_p]
        self.h.tOnRtnRepealFromFutureToBankByFuture.restype = None
        self.FP_OnRtnRepealFromFutureToBankByFuture = CFUNCTYPE(None, POINTER(CThostFtdcRspRepealField))(self.__OnRtnRepealFromFutureToBankByFuture)
        self.h.tOnRtnRepealFromFutureToBankByFuture(self.pSpi, self.FP_OnRtnRepealFromFutureToBankByFuture)
        # 期货发起银行资金转期货应答
        self.h.tOnRspFromBankToFutureByFuture.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspFromBankToFutureByFuture.restype = None
        self.FP_OnRspFromBankToFutureByFuture = CFUNCTYPE(None, POINTER(CThostFtdcReqTransferField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspFromBankToFutureByFuture)
        self.h.tOnRspFromBankToFutureByFuture(self.pSpi, self.FP_OnRspFromBankToFutureByFuture)
        # 期货发起期货资金转银行应答
        self.h.tOnRspFromFutureToBankByFuture.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspFromFutureToBankByFuture.restype = None
        self.FP_OnRspFromFutureToBankByFuture = CFUNCTYPE(None, POINTER(CThostFtdcReqTransferField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspFromFutureToBankByFuture)
        self.h.tOnRspFromFutureToBankByFuture(self.pSpi, self.FP_OnRspFromFutureToBankByFuture)
        # 期货发起查询银行余额应答
        self.h.tOnRspQueryBankAccountMoneyByFuture.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspQueryBankAccountMoneyByFuture.restype = None
        self.FP_OnRspQueryBankAccountMoneyByFuture = CFUNCTYPE(None, POINTER(CThostFtdcReqQueryAccountField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspQueryBankAccountMoneyByFuture)
        self.h.tOnRspQueryBankAccountMoneyByFuture(self.pSpi, self.FP_OnRspQueryBankAccountMoneyByFuture)
        # 银行发起银期开户通知
        self.h.tOnRtnOpenAccountByBank.argtypes = [c_void_p, c_void_p]
        self.h.tOnRtnOpenAccountByBank.restype = None
        self.FP_OnRtnOpenAccountByBank = CFUNCTYPE(None, POINTER(CThostFtdcOpenAccountField))(self.__OnRtnOpenAccountByBank)
        self.h.tOnRtnOpenAccountByBank(self.pSpi, self.FP_OnRtnOpenAccountByBank)
        # 银行发起银期销户通知
        self.h.tOnRtnCancelAccountByBank.argtypes = [c_void_p, c_void_p]
        self.h.tOnRtnCancelAccountByBank.restype = None
        self.FP_OnRtnCancelAccountByBank = CFUNCTYPE(None, POINTER(CThostFtdcCancelAccountField))(self.__OnRtnCancelAccountByBank)
        self.h.tOnRtnCancelAccountByBank(self.pSpi, self.FP_OnRtnCancelAccountByBank)
        # 银行发起变更银行账号通知
        self.h.tOnRtnChangeAccountByBank.argtypes = [c_void_p, c_void_p]
        self.h.tOnRtnChangeAccountByBank.restype = None
        self.FP_OnRtnChangeAccountByBank = CFUNCTYPE(None, POINTER(CThostFtdcChangeAccountField))(self.__OnRtnChangeAccountByBank)
        self.h.tOnRtnChangeAccountByBank(self.pSpi, self.FP_OnRtnChangeAccountByBank)
        # 请求查询分类合约响应
        self.h.tOnRspQryClassifiedInstrument.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspQryClassifiedInstrument.restype = None
        self.FP_OnRspQryClassifiedInstrument = CFUNCTYPE(None, POINTER(CThostFtdcInstrumentField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspQryClassifiedInstrument)
        self.h.tOnRspQryClassifiedInstrument(self.pSpi, self.FP_OnRspQryClassifiedInstrument)
        # 请求组合优惠比例响应
        self.h.tOnRspQryCombPromotionParam.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspQryCombPromotionParam.restype = None
        self.FP_OnRspQryCombPromotionParam = CFUNCTYPE(None, POINTER(CThostFtdcCombPromotionParamField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspQryCombPromotionParam)
        self.h.tOnRspQryCombPromotionParam(self.pSpi, self.FP_OnRspQryCombPromotionParam)
        # 投资者风险结算持仓查询响应
        self.h.tOnRspQryRiskSettleInvstPosition.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspQryRiskSettleInvstPosition.restype = None
        self.FP_OnRspQryRiskSettleInvstPosition = CFUNCTYPE(None, POINTER(CThostFtdcRiskSettleInvstPositionField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspQryRiskSettleInvstPosition)
        self.h.tOnRspQryRiskSettleInvstPosition(self.pSpi, self.FP_OnRspQryRiskSettleInvstPosition)
        # 风险结算产品查询响应
        self.h.tOnRspQryRiskSettleProductStatus.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspQryRiskSettleProductStatus.restype = None
        self.FP_OnRspQryRiskSettleProductStatus = CFUNCTYPE(None, POINTER(CThostFtdcRiskSettleProductStatusField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspQryRiskSettleProductStatus)
        self.h.tOnRspQryRiskSettleProductStatus(self.pSpi, self.FP_OnRspQryRiskSettleProductStatus)
        # SPBM期货合约参数查询响应
        self.h.tOnRspQrySPBMFutureParameter.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspQrySPBMFutureParameter.restype = None
        self.FP_OnRspQrySPBMFutureParameter = CFUNCTYPE(None, POINTER(CThostFtdcSPBMFutureParameterField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspQrySPBMFutureParameter)
        self.h.tOnRspQrySPBMFutureParameter(self.pSpi, self.FP_OnRspQrySPBMFutureParameter)
        # SPBM期权合约参数查询响应
        self.h.tOnRspQrySPBMOptionParameter.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspQrySPBMOptionParameter.restype = None
        self.FP_OnRspQrySPBMOptionParameter = CFUNCTYPE(None, POINTER(CThostFtdcSPBMOptionParameterField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspQrySPBMOptionParameter)
        self.h.tOnRspQrySPBMOptionParameter(self.pSpi, self.FP_OnRspQrySPBMOptionParameter)
        # SPBM品种内对锁仓折扣参数查询响应
        self.h.tOnRspQrySPBMIntraParameter.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspQrySPBMIntraParameter.restype = None
        self.FP_OnRspQrySPBMIntraParameter = CFUNCTYPE(None, POINTER(CThostFtdcSPBMIntraParameterField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspQrySPBMIntraParameter)
        self.h.tOnRspQrySPBMIntraParameter(self.pSpi, self.FP_OnRspQrySPBMIntraParameter)
        # SPBM跨品种抵扣参数查询响应
        self.h.tOnRspQrySPBMInterParameter.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspQrySPBMInterParameter.restype = None
        self.FP_OnRspQrySPBMInterParameter = CFUNCTYPE(None, POINTER(CThostFtdcSPBMInterParameterField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspQrySPBMInterParameter)
        self.h.tOnRspQrySPBMInterParameter(self.pSpi, self.FP_OnRspQrySPBMInterParameter)
        # SPBM组合保证金套餐查询响应
        self.h.tOnRspQrySPBMPortfDefinition.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspQrySPBMPortfDefinition.restype = None
        self.FP_OnRspQrySPBMPortfDefinition = CFUNCTYPE(None, POINTER(CThostFtdcSPBMPortfDefinitionField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspQrySPBMPortfDefinition)
        self.h.tOnRspQrySPBMPortfDefinition(self.pSpi, self.FP_OnRspQrySPBMPortfDefinition)
        # 投资者SPBM套餐选择查询响应
        self.h.tOnRspQrySPBMInvestorPortfDef.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspQrySPBMInvestorPortfDef.restype = None
        self.FP_OnRspQrySPBMInvestorPortfDef = CFUNCTYPE(None, POINTER(CThostFtdcSPBMInvestorPortfDefField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspQrySPBMInvestorPortfDef)
        self.h.tOnRspQrySPBMInvestorPortfDef(self.pSpi, self.FP_OnRspQrySPBMInvestorPortfDef)
        # 投资者新型组合保证金系数查询响应
        self.h.tOnRspQryInvestorPortfMarginRatio.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspQryInvestorPortfMarginRatio.restype = None
        self.FP_OnRspQryInvestorPortfMarginRatio = CFUNCTYPE(None, POINTER(CThostFtdcInvestorPortfMarginRatioField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspQryInvestorPortfMarginRatio)
        self.h.tOnRspQryInvestorPortfMarginRatio(self.pSpi, self.FP_OnRspQryInvestorPortfMarginRatio)
        # 投资者产品SPBM明细查询响应
        self.h.tOnRspQryInvestorProdSPBMDetail.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspQryInvestorProdSPBMDetail.restype = None
        self.FP_OnRspQryInvestorProdSPBMDetail = CFUNCTYPE(None, POINTER(CThostFtdcInvestorProdSPBMDetailField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspQryInvestorProdSPBMDetail)
        self.h.tOnRspQryInvestorProdSPBMDetail(self.pSpi, self.FP_OnRspQryInvestorProdSPBMDetail)
        

    def GetApiVersion(self):
        v = str(self.h.tGetApiVersion(), encoding="utf-8")
        return str(v)

    def GetTradingDay(self):
        v = str(self.h.tGetTradingDay(self.api), encoding="utf-8")
        return str(v)

    def CTP_GetSystemInfo(self, pSystemInfo:TThostFtdcClientSystemInfoType, nLen:TThostFtdcSystemInfoLenType):
        res = self.h.dCTP_GetSystemInfo(pSystemInfo, nLen)
        return res

    def CTP_GetSystemInfoUnAesEncode(self, pSystemInfo:TThostFtdcClientSystemInfoType, nLen:TThostFtdcSystemInfoLenType):
        res = self.h.dCTP_GetSystemInfoUnAesEncode(pSystemInfo, nLen)
        return res

    def CTP_GetDataCollectApiVersion(self):
        v = str(self.h.dCTP_GetDataCollectApiVersion(), encoding="utf-8")
        return v
    #################### 请求函数 #######################
    
    def Release(self): 
        """ 创建TraderApi """
        self.h.tRelease(self.api)
    
    def Init(self): 
        """ 初始化 """
        self.h.tInit(self.api)
    
    def Join(self): 
        """ 等待接口线程结束运行 """ 
        return self.h.tJoin(self.api) 
    
    def RegisterFront(self, pszFrontAddress:str): 
        """ 注册前置机网络地址 """
        self.h.tRegisterFront(self.api, bytes(pszFrontAddress, encoding='ascii'))
    
    def RegisterNameServer(self, pszNsAddress:str): 
        """ @remark RegisterNameServer优先于RegisterFront """
        self.h.tRegisterNameServer(self.api, bytes(pszNsAddress, encoding='ascii'))
    
    def RegisterFensUserInfo(self,  pFensUserInfo:CThostFtdcFensUserInfoField): 
        """ 注册名字服务器用户信息 """
        self.h.tRegisterFensUserInfo(self.api, byref( pFensUserInfo))
    
    def RegisterSpi(self): 
        """ 注册回调接口 """
        self.h.tRegisterSpi(self.api, self.pSpi)
    
    def SubscribePrivateTopic(self, nResumeType:THOST_TE_RESUME_TYPE): 
        """ 订阅私有流。 """
        self.h.tSubscribePrivateTopic(self.api, nResumeType)
    
    def SubscribePublicTopic(self, nResumeType:THOST_TE_RESUME_TYPE): 
        """ 订阅公共流。 """
        self.h.tSubscribePublicTopic(self.api, nResumeType)
    
    def ReqAuthenticate(self, pReqAuthenticateField:CThostFtdcReqAuthenticateField, nRequestID:int): 
        """ 客户端认证请求 """ 
        return self.h.tReqAuthenticate(self.api, byref(pReqAuthenticateField), nRequestID) 
    
    def RegisterUserSystemInfo(self, pUserSystemInfo:CThostFtdcUserSystemInfoField): 
        """ 注册用户终端信息，用于中继服务器多连接模式 """ 
        return self.h.tRegisterUserSystemInfo(self.api, byref(pUserSystemInfo)) 
    
    def SubmitUserSystemInfo(self, pUserSystemInfo:CThostFtdcUserSystemInfoField): 
        """ 上报用户终端信息，用于中继服务器操作员登录模式 """ 
        return self.h.tSubmitUserSystemInfo(self.api, byref(pUserSystemInfo)) 
    
    def ReqUserLogin(self, pReqUserLoginField:CThostFtdcReqUserLoginField, nRequestID:int): 
        """ 用户登录请求 """ 
        systemInfo = TThostFtdcClientSystemInfoType()
        length = TThostFtdcSystemInfoLenType(273)
        self.CTP_GetSystemInfoUnAesEncode(systemInfo, length)
        systemInfo = systemInfo.value
        length = length.value
        return self.h.tReqUserLogin(self.api, byref(pReqUserLoginField), nRequestID, length, systemInfo) 
    
    def ReqUserLogout(self, pUserLogout:CThostFtdcUserLogoutField, nRequestID:int): 
        """ 登出请求 """ 
        return self.h.tReqUserLogout(self.api, byref(pUserLogout), nRequestID) 
